--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SNOWFLAKE_USER=hari8059
-SNOWFLAKE_PASSWORD=Greielts320$
-SNOWFLAKE_ACCOUNT=rs84321.central-us.azure
+SNOWFLAKE_USER=*****
+SNOWFLAKE_PASSWORD=*****$
+SNOWFLAKE_ACCOUNT=******
 SNOWFLAKE_DATABASE=DBT_Test
 SNOWFLAKE_SCHEMA=PUBLIC
 SNOWFLAKE_WAREHOUSE=DBT_WH
